# renpy-switch

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build-switch-docker.bash  build-switch.bash  package-files.bash  prepare-romfs.bash  setup-docker.bash  setup.bash
.github/workflows/: ci.yml
external_library_build/: Building.md  cpython.patch  generate_glad_bindings.bash  generate_libnx_bindings.bash  generate_libnx_bindings_lightweight.bash  libnx_minimal.i  link_compile_pylibs.bash  link_sources.bash  pygame_sdl2.patch  quick_and_dirty_build_tips.md  renpy.patch  symlink_to_file_for_packaging.bash
external_library_build/cpython_config_files/: Setup.local  config.site
external_library_build/pystub/: threading.py
source/: main.c
